fix: redirect Admin link to admin page

--- a/src/views/_nav.njk
+++ b/src/views/_nav.njk
@@ -1,5 +1,5 @@
 <nav>
     <a href="/" >Home</a>
-    <a href="/admin/login" >Administrator</a>
+    <a href="/admin" >Administrator</a>
     <a href="/cart" >Cart</a>
 </nav>
