feat: add static files middleware

--- a/src/views/_base.njk
+++ b/src/views/_base.njk
@@ -1,6 +1,6 @@
 <html>
  <head>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <title> E-commerce </title> 
  </head>
  <body>
@@ -14,5 +14,6 @@
    <footer>
    See U later!
    </footer>
+   <script defer src="/public/main.js" ></script>
  </body>
 </html>
