chore: cart is stored in session and updated by api calls

--- a/src/views/_base.njk
+++ b/src/views/_base.njk
@@ -7,6 +7,10 @@
 
    <header>
       {% include "views/_nav.njk" %}
+      <div>
+         {%  set total = cart.total or 0 %}
+         <a href="/cart" >Cart: <span id="cartCount">{{ total | int }}</span></a>
+      </div>
    </header>
    <main>
       {% block content %}{% endblock content %}
