chore: add checkout, configure heroku

--- a/src/views/cart.njk
+++ b/src/views/cart.njk
@@ -21,4 +21,6 @@
         </article>
     {% endfor %}
     </section>
+
+    <a href="/checkout">Zamówienie z obowiązkiem zapłaty</a>
 {% endblock content %}
