--- a/src/views/cart.njk
+++ b/src/views/cart.njk
@@ -1,4 +1,4 @@
-{% extends "views/_base.njk" %}
+{% extends "_base.njk" %}
 
 {% block content %}
     <h1>Cart</h1>
@@ -22,5 +22,5 @@
     {% endfor %}
     </section>
 
-    <a href="/checkout">Zamówienie z obowiązkiem zapłaty</a>
+    <a href="/checkout">Order!</a>
 {% endblock content %}
