--- a/src/views/accounts/login.njk
+++ b/src/views/accounts/login.njk
@@ -1,17 +1,24 @@
+{% extends "_base.njk" %}
 
-<ul>
-{% for message in messages %}
-  <li>{{ message }}</li>
-{% endfor %}
-</ul>
-<form action="/admin/login" method="post">
-    <label>
-        Email
-        <input type="email" name="email" placeholder="you@domain.com"/>
-    </label>
-    <label>
-        Password
-        <input type="password" name="password"/>
-    </label>
-    <button type="submit">Submit</button>
-</form>
+{% block content %}
+    Login
+
+    <ul>
+    {% for message in messages %}
+    <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+    <form action="/admin/login" method="post">
+        <label>
+            Email
+            <input type="email" name="email" placeholder="you@domain.com"/>
+        </label>
+        <label>
+            Password
+            <input type="password" name="password"/>
+        </label>
+        <button type="submit">Submit</button>
+    </form>
+
+    
+{% endblock content %}
