--- a/src/views/status.njk
+++ b/src/views/status.njk
@@ -1,17 +1,17 @@
-{% extends "views/_base.njk" %}
+{% extends "_base.njk" %}
 
 {% block content %}
 <section>
+    Order data:
     <ul>
-        <li>{{ checkout.type }}</li>
-        <li>{{ checkout.price }}</li>
-        <li>{{ checkout.status }}</li>
-        <li>{{ checkout.firstname }}</li>
-        <li>{{ checkout.lastname }}</li>
-        <li>{{ checkout.address }}</li>
-        <li>{{ checkout.postal }}</li>
-        <li>{{ checkout.email }}</li>
-        <li>{{ checkout.phone }}</li>
+        <li>Price: {{ checkout.price }}</li>
+        <li>Payment status: {{ checkout.status }}</li>
+        <li>Firstname: {{ checkout.firstname }}</li>
+        <li>Lastname: {{ checkout.lastname }}</li>
+        <li>Address: {{ checkout.address }}</li>
+        <li>Postal code: {{ checkout.postal }}</li>
+        <li>E-mail: {{ checkout.email }}</li>
+        <li>Phone: {{ checkout.phone }}</li>
     </ul>
 
     <div>
@@ -20,8 +20,15 @@
         {% if checkout.type == "traditional" %}
             Please make a money transfer on this account : 00 1120 1030 1234 1234 1234.
             In the transfer name please write: "Order: {{ checkout._id["$oid"] }}"
-        {% elif checkout.type == "online" %}
-            <a href="" >To pay online please click here</a>
+        {% elif checkout.type == "online" and checkout.status == "PENDING" %}
+            <a href="{{ checkout.paymentLink }}" target="_blank">To pay online please click here</a>
+            This website will auto refresh until payment status changes.
+            <script>
+                window.setTimeout(() => {
+                    // reload
+                    window.location.assign(window.location);
+                }, 6000);
+            </script>
         {% endif %}
     </div>
 </section>
