feat: adjust layouts, add option to delete items, more control over cart(edit number)

--- a/src/views/_nav.njk
+++ b/src/views/_nav.njk
@@ -1,4 +1,4 @@
-<nav>
-    <a href="/" >Home</a>
-    <a href="/admin" >Administrator</a>
-</nav>
+<div class="flex items-baseline">
+    <a href="/" class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900 focus:outline-none focus:text-white focus:bg-gray-700">Home</a>
+    <a href="/admin" class="ml-4 px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700 focus:outline-none focus:text-white focus:bg-gray-700">Administrator</a>
+</div>
