--- a/src/views/index.njk
+++ b/src/views/index.njk
@@ -1,20 +1,32 @@
 {% extends "_base.njk" %}
 
-{% block content %}
-    <h1>Products</h1>
+{% block header %}
+    E-commerce labs | Products
+{% endblock header %}
 
-    <section class="products">
-    {% for product in products %}
-        <article>
-            <header>
-                <h2>{{ product.name }}</h2>
-            </header>
-            <img src="{{ product.image }}" />
-            <aside>
-                Price: {{ product.price }}
-                <a href="/product/{{ product._id["$oid"] }}" >View details</a>
-            </aside>
-        </article>
-    {% endfor %}
-    </section>
+{% block content %}
+    <div class="flex flex-wrap justify-center items-stretch">
+        {% for product in products %}
+            <div class="container mx-auto max-w-sm w-full p-4 sm:w-1/2">
+
+                <div class="card h-full flex flex-col justify-center py-4 px-8 bg-white rounded-lg shadow-2xl">
+                    <div class="prod-title flex-1">
+                        <p class="text-2xl uppercase text-gray-900 font-bold">{{ product.name }}</p>
+                    </div>
+                    <div class="prod-img py-4 flex-1">
+                        <img src="{{ product.image }}"
+                            class="w-full object-cover object-center"/>
+                    </div>
+                    <div class="prod-info grid gap-10">
+                        <div class="flex flex-col md:flex-row justify-between items-center text-gray-900">
+                            <p class="font-bold text-xl">{{ product.price }} PLN</p>
+                            <a href="/product/{{ product._id["$oid"] }}"
+                                class="px-6 py-2 transition ease-in duration-200 uppercase rounded-full hover:bg-gray-800 hover:text-white border-2 border-gray-900 focus:outline-none">View details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        {% endfor %}
+    </div>
 {% endblock content %}
