--- a/src/views/_base.njk
+++ b/src/views/_base.njk
@@ -1,23 +1,64 @@
 <html>
- <head>
-  <link rel="stylesheet" href="/public/style.css">
-  <title> E-commerce </title> 
- </head>
- <body>
+   <head>
+      <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tailwindcss/ui@latest/dist/tailwind-ui.min.css">
+      <link rel="stylesheet" href="/public/style.css">
+      <title> E-commerce </title>
+   </head>
+   <body>
+      <div class="bg-gray-100">
+         <nav class="bg-gray-800">
+            <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+               <div class="flex items-center justify-between h-16">
+                  <div class="flex items-center">
+                     <div class="md:block">
+                        {% include "_nav.njk" %}
+                     </div>
+                  </div>
+                  <div class="hidden md:block">
+                        {%  set totalQuantity = cart.totalQuantity or 0 %}
+                        <a href="/cart" class="ml-4 flex items-center md:ml-6 p-3 border-2 border-transparent text-gray-400 rounded-full hover:text-white focus:outline-none focus:text-white focus:bg-gray-700" aria-label="Cart">
+                           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentcolor" class="h-6 w-6"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M22 9h-4.79l-4.39-6.57c-.4-.59-1.27-.59-1.66 0L6.77 9H2c-.55 0-1 .45-1 1 0 .09.01.18.04.27l2.54 9.27c.23.84 1 1.46 1.92 1.46h13c.92 0 1.69-.62 1.93-1.46l2.54-9.27L23 10c0-.55-.45-1-1-1zM11.99 4.79L14.8 9H9.18l2.81-4.21zM12 17c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/></svg>
+                            <span class="p-1" id="cartCount">{{ totalQuantity | int }}</span>
+                        </a>
+                  </div>
+                  <div class="-mr-2 flex md:hidden">
+                     <!-- Mobile menu button -->
+                     <button class="inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white">
+                        <!-- Menu open: "hidden", Menu closed: "block" -->
+                        <svg class="block h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+                        </svg>
+                        <!-- Menu open: "block", Menu closed: "hidden" -->
+                        <svg class="hidden h-6 w-6" stroke="currentColor" fill="none" viewBox="0 0 24 24">
+                           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+                        </svg>
+                     </button>
+                  </div>
+               </div>
+            </div>
+         </nav>
 
-   <header>
-      {% include "_nav.njk" %}
-      <div>
-         {%  set total = cart.total or 0 %}
-         <a href="/cart" >Cart: <span id="cartCount">{{ total | int }}</span></a>
+         <header class="bg-white shadow">
+            <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+               <h1 class="text-3xl font-bold leading-tight text-gray-900">
+                  {% block header %}{% endblock header %}
+               </h1>
+            </div>
+         </header>
+         <main>
+            <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+               
+               <!-- Replace with your content -->
+               <div class="px-4 py-6 sm:px-0">
+                  <div class="border-4 border-dashed border-gray-200 rounded-lg">
+                     {% block content %}{% endblock content %}
+                  </div>
+               </div>
+               <!-- /End replace -->
+            </div>
+         </main>
       </div>
-   </header>
-   <main>
-      {% block content %}{% endblock content %}
-   </main>
-   <footer>
-   See U later!
-   </footer>
-   <script defer src="/public/main.js" ></script>
- </body>
+      <script defer src="/public/main.js" ></script>
+   </body>
 </html>
