--- a/src/views/accounts/login.njk
+++ b/src/views/accounts/login.njk
@@ -1,24 +1,41 @@
 {% extends "_base.njk" %}
 
+{% block header %}
+    Sign in to access Admin panel
+{% endblock header %}
+
 {% block content %}
-    Login
-
-    <ul>
-    {% for message in messages %}
-    <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-    <form action="/admin/login" method="post">
-        <label>
-            Email
-            <input type="email" name="email" placeholder="you@domain.com"/>
-        </label>
-        <label>
-            Password
-            <input type="password" name="password"/>
-        </label>
-        <button type="submit">Submit</button>
+    <div class="h-full flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-md w-full">
+    <div>
+      <p class="mt-2 text-center text-sm leading-5 text-gray-600">
+        {% for message in messages %}
+            <span class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+			{{ message }}
+		    </span>
+        {% endfor %}
+    </div>
+    <form class="mt-8" action="/admin/login" method="POST">
+      <div class="rounded-md shadow-sm">
+        <div>
+          <input aria-label="Email address" name="email" type="email" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5" placeholder="Email address" />
+        </div>
+        <div class="-mt-px">
+          <input aria-label="Password" name="password" type="password" required class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5" placeholder="Password" />
+        </div>
+      </div>
+      <div class="mt-6">
+        <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">
+          <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 transition ease-in-out duration-150" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" clip-rule="evenodd" />
+            </svg>
+          </span>
+          Sign in
+        </button>
+      </div>
     </form>
-
+  </div>
+</div>
     
 {% endblock content %}
