--- a/src/views/product.njk
+++ b/src/views/product.njk
@@ -1,17 +1,27 @@
 {% extends "_base.njk" %}
 
+{% block header %}
+    {{ product.name }}
+{% endblock header %}
+
 {% block content %}
-<section class="products">
-    <article id="product" data-id="{{ product._id["$oid"] }}">
-        <header>
-            <h2>{{ product.name }}</h2>
-        </header>
-        <img src="{{ product.image }}" />
-        <aside>
-            Price: {{ product.price }}
-            <button id="addToCart">Add to cart</button>
-        </aside>
-    </article>
-</section>
+    <div class="md:flex shadow-lg mx-12 md:mx-auto" id="product" data-id="{{ product._id["$oid"] }}">
+    <img class="h-full w-full md:w-1/3  object-cover rounded-lg rounded-r-none" src="{{ product.image }}" alt="{{ product.name }}">
+    <div class="w-full md:w-2/3 px-16 py-16 bg-white rounded-lg">
+        <div class="flex items-center">
+            <p class="text-gray-800 text-6xl font-semibold tracking-tighter">
+                only
+                {{ product.price }} PLN
+            </p>
+        </div>
+        <div class="flex items-center mt-4 top-auto">
+            <button id="addToCart"
+                                class="px-6 py-2 transition ease-in duration-200 uppercase rounded-full hover:bg-gray-800 hover:text-white border-2 border-gray-900 focus:outline-none">Add to cart</button>
+        </div>
+    </div>
+    </div>
+
+    <aside>
+    </aside>
 {% endblock content %}
 
